After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657435 - Does not add the include path to the pkg-config file, needed in an uninstalled setup by g-e-s
Does not add the include path to the pkg-config file, needed in an uninstalle...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-python
0.10.13
Other Linux
: Normal blocker
: 0.10.22
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks: 657436
 
 
Reported: 2011-08-26 13:20 UTC by Sebastian Dröge (slomo)
Modified: 2011-10-12 11:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
python: Add $(PYGST_CFLAGS) to CFLAGS to fix the build (1.06 KB, patch)
2011-08-26 13:22 UTC, Sebastian Dröge (slomo)
rejected Details | Review
pkgconfig: Add Cflags with the include path for the headers (1.45 KB, patch)
2011-08-26 13:22 UTC, Sebastian Dröge (slomo)
committed Details | Review
Don't install common.h and remove from public headers (4.41 KB, patch)
2011-10-12 00:20 UTC, Tim-Philipp Müller
committed Details | Review

Description Sebastian Dröge (slomo) 2011-08-26 13:20:07 UTC
See summary, this breaks the build of gst-editing-services in an uninstalled setup for example. Problem here is, that the headers are installed into includedir/pygst/pygst.h while they are in gst/pygst.h uninstalled.
Comment 1 Sebastian Dröge (slomo) 2011-08-26 13:22:02 UTC
Created attachment 194828 [details] [review]
python: Add $(PYGST_CFLAGS) to CFLAGS to fix the build
Comment 2 Sebastian Dröge (slomo) 2011-08-26 13:22:53 UTC
Created attachment 194829 [details] [review]
pkgconfig: Add Cflags with the include path for the headers
Comment 3 Sebastian Dröge (slomo) 2011-08-26 13:23:03 UTC
Comment on attachment 194828 [details] [review]
python: Add $(PYGST_CFLAGS) to CFLAGS to fix the build

wrong bug
Comment 4 Sebastian Dröge (slomo) 2011-08-26 13:25:44 UTC
(In reply to comment #2)
> Created an attachment (id=194829) [details] [review]
> pkgconfig: Add Cflags with the include path for the headers

This does not fix the issue with the different paths for uninstalled and installed headers though. Solutions would be to rename the gst directory in pygst to pygst or to install the headers into includedir/gstreamer-0.10/gst/pygst.h for example.
Comment 5 Tim-Philipp Müller 2011-09-26 17:42:26 UTC
Reconfirming as blocker, because we might need to change the path where the header is installed to, and that's only something that was added in git.
Comment 6 Tim-Philipp Müller 2011-10-03 16:17:22 UTC
> Solutions would be to
>
>  a) rename the gst directory in pygst to pygst, or
>
>  b) to install the headers into includedir/gstreamer-0.10/gst/pygst.h

or presumably

   c) to add a gst-python/pygst/ directory with just the pygst.h header

which would be less intrusive.
Comment 7 Edward Hervey 2011-10-07 10:49:10 UTC
I vote for:
 Option b) to install the headers into includedir/gstreamer-0.10/gst/pygst.h
Comment 8 Tim-Philipp Müller 2011-10-11 21:39:51 UTC
Hrm, I think there's a bit more to do here:

For one, I don't think we want common.h installed, and from the looks of it there's no reason why it should be installed (if it must be installed, it should be renamed and given a pygst prefix).

And pygst.h doesn't look like all of it should be in an installed header..
Comment 9 Tim-Philipp Müller 2011-10-12 00:20:21 UTC
Created attachment 198827 [details] [review]
Don't install common.h and remove from public headers

    Doesn't seem to be needed anyway. Also remove duplicate
    pygobject.h include in common.h while at it.
Comment 10 Tim-Philipp Müller 2011-10-12 11:54:33 UTC
commit 6aa1c70ac13bd30d3c4770b1107ae3d94cbf9441
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Fri Aug 26 15:22:16 2011 +0200

    pkgconfig: Add Cflags with the include path for the headers
    
    https://bugzilla.gnome.org/show_bug.cgi?id=657435

commit b769a83fb4bd15e83e7bcea82e9d2f940fae7bae
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Tue Oct 11 23:33:21 2011 +0100

    Don't install common.h and remove from public headers
    
    Doesn't seem to be needed anyway. Also remove duplicate
    pygobject.h include in common.h while at it.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=657435

commit bf9deb812b437f8c16bb95f5d6a1cd753d97771f
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Tue Oct 11 22:59:05 2011 +0100

    Install headers into $includedir/gstreamer-0.10/gst not .../pygst/
    
    This matches the directory layout in the source tree and makes it
    possible to find the headers (e.g. from g-e-s) in an uninstalled
    setup.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=657435

commit 96828015e997c928a1b7b22987b9174669f3f9cc
Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
Date:   Tue Oct 11 22:57:30 2011 +0100

    Keep pygst-private.h in noinst_HEADERS
    
    Makes sure it gets disted.