Don't install common.h and remove from public headers

Doesn't seem to be needed anyway. Also remove duplicate
pygobject.h include in common.h while at it.

https://bugzilla.gnome.org/show_bug.cgi?id=657435